--- a/exercicio 2/index.html
+++ b/exercicio 2/index.html
@@ -11,7 +11,8 @@
     <div class="geral">
         <div class="quadrado">
             <div>
-                <h1>Login</h1>
+                <h1>Sign In</h1>
+                <a>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente sit aut eos consectetur adipisicing.</a>
             </div>
             <form>
                 <input type="email" name="emailLogin" id="emailLogin" placeholder="Email">
