--- a/exercicio 2/index.html
+++ b/exercicio 2/index.html
@@ -15,15 +15,19 @@
                 <a>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente sit aut eos consectetur adipisicing.</a>
             </div>
             <form>
-                <input type="email" name="emailLogin" id="emailLogin" placeholder="Email">
+                <input type="username" name="usernameLogin" id="usernameLogin" placeholder="Username">
                 <input type="password" name="passwordLogin" id="passwordLogin" placeholder="Password">
+                <input type="checkbox" name="RememberMe" id="RememberMe">
+                <a href="style/recursos/imagem referência.jpg">Forgot Password</a>
                 <button>Login</button>
             </form>
             <div class="textinho">
-                <span>Forgot <a href="style/recursos/imagem referência.jpg">Password</a>?</span><br>
-                <span>Don't have an account? <a href="style/recursos/imagem referência.jpg">Sign up</a></span>
+                <button>Login with Facebook</button>
+                <button>Login with Twitter</button>
+                <button>Login with google</button>
             </div>
         </div>
+        <img src="style/recursos/imagem referência.jpg" width="50%" height="100%">
     </div>
 </body>
 </html>
