--- a/exercicio 4/index.html
+++ b/exercicio 4/index.html
@@ -14,7 +14,7 @@
                 <h1>Sign In</h1>
                 <a>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente sit aut eos consectetur adipisicing.</a>
             </div>
-            <form>
+            <form id="FormId">
                 <input type="username" name="usernameLogin" id="usernameLogin" placeholder="Username">
                 <input type="password" name="passwordLogin" id="passwordLogin" placeholder="Password">
                 <input type="checkbox" name="RememberMe" id="RememberMe">
@@ -29,5 +29,18 @@
         </div>
         <img src="style/recursos/imagem referência.jpg" width="50%" height="100%">
     </div>
+    <script>
+        var elemento = document.getElementById("FormId");
+        elemento.style.backgroundColor = 'red';
+        console.log(elemento)
+
+        var h1 = document.createElement('h1');
+        h1.textContent = "texto JS";
+        elemento.append(h1);
+        h1.style.backgroundColor = 'blue';
+        elemento.append(h1);
+
+        // vale lembrar que essas 'variaveis', que a gente chama com append, são LITERALMENTE o mesmo elemento. Não dá pra chamar o mesmo item 2 vezes
+    </script>
 </body>
 </html>
