--- a/exercicio 2/index.html
+++ b/exercicio 2/index.html
@@ -22,10 +22,10 @@
             </form>
             <div class="Logins">
                 <button class="LoginCru">Login</button>
-                <div class="separadorLogin"><a>- or -</a></div>
-                <button class="LoginFace">Login with Facebook</button>
-                <button class="LoginTwit">Login with Twitter</button>
-                <button class="LoginGoog">Login with google</button>
+                <div class="separadorLogin">- or -</div>
+                <button class="LoginFace"><img src="style/recursos/facebook.jpg" class="iconeSocial">  Login with Facebook</button>
+                <button class="LoginTwit"><img src="style/recursos/twitter.png" class="iconeSocial">    Login with Twitter</button>
+                <button class="LoginGoog"><img src="style/recursos/google.jpg" class="iconeSocial">    Login with google</button>
             </div>
         </div>
         <img src="style/recursos/imagem.jpg" class="img">
