ajustando front-end para o JS

--- a/exercicio 4/index.html
+++ b/exercicio 4/index.html
@@ -12,17 +12,35 @@
     <div class="geral">
         <div class="quadrado">
             <div>
-                <h1>Login</h1>
+                <h1>Lista</h1>
             </div>
             <form id="form">
-                <input type="email" name="emailLogin" id="emailLogin" placeholder="Email">
-                <input type="password" name="passwordLogin" id="passwordLogin" placeholder="Password">
-                <button type="submit">Login</button>
+                <input type="email" name="emailLogin" id="emailLogin" placeholder="Item da lista">
+                <button type="submit">Adicionar item</button>
             </form>
-            <div class="textinho">
-                <span>Forgot <a href="style/recursos/imagem referência.jpg">Password</a>?</span><br>
-                <span>Don't have an account? <a href="style/recursos/imagem referência.jpg">Sign up</a></span>
-            </div>
+        </div>
+        <div class="quadrado">
+            <a>item 1 da lista</a>
+            <a>item 2 da lista</a>
+            <a>item 3 da lista</a>
+            <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, fuga at commodi eveniet sapiente delectus incidunt voluptatibus quas in quisquam porro est enim adipisci nisi quis facilis alias. Atque, hic?</a>
+            <a>item 5 da lista</a>
+            <a>item 1 da lista</a>
+            <a>item 2 da lista</a>
+            <a>item 3 da lista</a>
+            <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, fuga at commodi eveniet sapiente delectus incidunt voluptatibus quas in quisquam porro est enim adipisci nisi quis facilis alias. Atque, hic?</a>
+            <a>item 5 da lista</a>
+            <a>item 1 da lista</a>
+            <a>item 2 da lista</a>
+            <a>item 3 da lista</a>
+            <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, fuga at commodi eveniet sapiente delectus incidunt voluptatibus quas in quisquam porro est enim adipisci nisi quis facilis alias. Atque, hic?</a>
+            <a>item 5 da lista</a>
+            <a>item 5 da lista</a>
+            <a>item 1 da lista</a>
+            <a>item 2 da lista</a>
+            <a>item 3 da lista</a>
+            <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, fuga at commodi eveniet sapiente delectus incidunt voluptatibus quas in quisquam porro est enim adipisci nisi quis facilis alias. Atque, hic?</a>
+            <a>item 5 da lista</a>
         </div>
     </div>
 </body>
